--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     margin: 0;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    
+    overflow-x: hidden;
   }
   
 /* halaman pertama */
